--- a/public/index.html
+++ b/public/index.html
@@ -5,5 +5,7 @@
     <title>TS Browser Game</title>
     <script src="./index.js"></script>
   </head>
-  <body></body>
+  <body>
+    <canvas id="canvas" width="600" height="600"></canvas>
+  </body>
 </html>
